# motor-driver

./: .gitignore  CMakeLists.txt  Doxyfile.custom  README.md  generate_docs.bat  mainpage.hpp
core/: controller.cpp  input.cpp  motor_driver.cpp  wavesculptor_simulator.cpp
core/simulation/: wavesculptor.cpp
docs/html/: annotated.html  can__driver_8hpp.html  can__driver_8hpp_source.html  can__frame_8hpp.html  can__frame_8hpp_source.html  classCanDriver-members.html  classCanDriver.html  classes.html  custom_light_theme.css  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_bad007344d42f4b5340fab5412b591e5.html  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  index.html  menudata.js  navtree.css  protocol_8hpp.html  protocol_8hpp_source.html  structActiveMotorChangeCommand-members.html  structActiveMotorChangeCommand.html  structBusMeasurement-members.html  structBusMeasurement.html  structCanFrame-members.html  structCanFrame.html  structDSPBoardTemperatureMeasurement-members.html  structDSPBoardTemperatureMeasurement.html  (+31 more)
esp32/: CMakeLists.txt  can_driver.cpp  clock.cpp  log.cpp  main.cpp
esp32/can/: can_driver.cpp
include/: can_frame.hpp  clock.hpp  controller.hpp  error.hpp  input.hpp  log.hpp  protocol.hpp  wavesculptor_simulator.hpp
main/: CMakeLists.txt  controller.cpp  error.cpp  input.cpp  main.cpp  motor_driver.cpp
windows/: CMakeLists.txt  can_driver.cpp  clock.cpp  log.cpp  main.cpp
windows/can/: can_driver.cpp
(+65 files in other folders)
